--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,18 +14,11 @@ body {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
-}
-
-.text-left {
-    text-align: left;
-}
-  
-.text-right {
-    text-align: right;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -131,6 +124,8 @@ section {
     padding: 20px;
     color: #024e76;
     border: solid 3px #024e76;
+    width: 40%;
+    margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -164,20 +159,16 @@ section {
     font-size: 16px;
 }
 
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center
 }
 
-.steps { 
-    text-align: center;
+.steps {
     background: #fce138;
 }
 
@@ -205,9 +196,9 @@ section {
     font-size: 23px;
 }
 
-.trainers {
-    text-align: center;
-}
+/* .trainers {
+
+} */
 
 .trainer {
     width: 900px;
@@ -246,7 +237,6 @@ section {
 
 .contact {
     background: #024e76;
-    text-align: center;
 }
 
 .contact h2 {
@@ -281,4 +271,16 @@ section {
   
 .contact-info a {
     color: #fce138;
+}
+
+.text-left {
+    text-align: left;
+}
+  
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
